--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,22 @@ name = "photo-terminal"
 version = "1.0.0"
 description = "Terminal-based image upload manager with inline preview for S3"
 readme = "README.md"
+license = {text = "MIT"}
 requires-python = ">=3.8"
 dependencies = [
     "PyYAML",
     "Pillow",
     "boto3",
     "rich",
+]
+classifiers = [
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
 ]
 
 [project.scripts]
